sorry-page add position absolute for fix height isn't covered

--- a/src/voucher/App.scss
+++ b/src/voucher/App.scss
@@ -335,6 +335,7 @@
 }
 
 .sorry-page {
+  position: absolute;
   height: 100%;
   background-color: $gray-4;
   &__title {
